# Flash-Loan-CW

contracts/cw-flash-loan/: Cargo.toml
